# sign-firmware-old

./: Cargo.toml  shell.nix
.cargo/: config.toml
.github/workflows/: deploy-application.yml
application/: Cargo.toml
application/src/: eeprom.rs  lib.rs  main.rs  schema.rs
bootloader/: Cargo.toml  build.rs  memory.x
bootloader/src/: main.rs
